social media icons fix on small devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,6 +57,12 @@ body {
     position: relative;
 }
 
+@media (max-width:420px) {
+    .preferite_btn, .add_to_visit_btn, .add_visited_btn {
+        font-size: 1.6rem!important;
+    }
+}
+
 .preferite_btn {
     position: absolute;
     z-index: 1;
@@ -79,6 +85,17 @@ body {
     display: flex;
 }
 
+@media (max-width: 420px){
+    .add_to_visit_btn{
+        right: 2rem!important;
+    }
+}
+
+@media (max-width: 420px){
+    .add_visited_btn{
+        right:5rem!important;
+    }
+}
 
 .add_visited_btn {
     position: absolute;
